syntax = "proto3";

package cloudMgmt;

option go_package=".";

message kubeConfigRequest {
  int64 userID = 1;
  int64 eventID = 2;
}

message kubeConfigResponse {
  int64 userID = 1;
  string persys = 2;
  string aws = 3;
  string azure = 4;
  string  gcp = 5;
}

message servicesRequest {
  int64 userID = 1;
  int64 eventID =2;
}

message servicesResponse {
  int64 userID = 1;
  string persys = 2;
  string aws = 3;
  string azure = 4;
  string gcp = 5;
  string state = 6;
}

service CloudMgmtService {
  rpc services(servicesRequest) returns (servicesResponse) {};
  rpc kubeConfig(kubeConfigRequest) returns (kubeConfigResponse) {};
}